fix /deno-dir permission

--- a/.devcontainer/docker/app/Dockerfile
+++ b/.devcontainer/docker/app/Dockerfile
@@ -1,10 +1,7 @@
 FROM denoland/deno:1.46.3
 
-# ホストの OS によっては Dev Container での起動時にデフォルトユーザーの UID:GID を 1000:1000 に設定するため、
-# UID:GID と Deno が利用するキャッシュディレクトリの所有者を合わせておく (デフォルトは 1993)
-RUN usermod -u 1000 deno && \
-    groupmod -g 1000 deno
-
-RUN chown deno:deno /deno-dir
+# Linux の場合、deno ユーザーの UID と GID がホストのユーザーの同一のものに設定されるため、/deno-dir への書き込みでパーミッションエラーが発生することがある
+# それを避けるため、単純に /deno-dir のパーミッションを 777 に設定しておく
+RUN chmod 777 /deno-dir
 
 USER deno
