fix deno-dir permission issue

--- a/.devcontainer/docker/app/Dockerfile
+++ b/.devcontainer/docker/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM denoland/deno:1.46.3
 
 # Linux の場合、deno ユーザーの UID と GID がホストのユーザーの同一のものに設定されるため、/deno-dir への書き込みでパーミッションエラーが発生することがある
-# それを避けるため、単純に /deno-dir のパーミッションを 777 に設定しておく
-RUN chmod 777 /deno-dir
+# それを避けるため、DENO_DIR にホームディレクトリ内のパスを設定する
+ENV DENO_DIR /home/deno/deno-dir
 
 USER deno
