--- a/app/deno.json
+++ b/app/deno.json
@@ -1,14 +1,17 @@
 {
   "imports": {
+    "@pandacss/dev": "npm:@pandacss/dev@^0.46.1",
     "hono": "jsr:@hono/hono@4.6.3",
     "hono_sessions": "https://deno.land/x/hono_sessions@v0.5.8/mod.ts",
     "zod": "npm:zod@3.23.8"
   },
   "tasks": {
-    "start": "deno run --watch --allow-net --allow-env --unstable-kv --env main.ts"
+    "dev": "deno run -A --unstable-kv --env --watch main.ts",
+    "panda": "deno run -A npm:@pandacss/dev --watch"
   },
   "compilerOptions": {
     "jsx": "precompile",
     "jsxImportSource": "hono/jsx"
-  }
+  },
+  "nodeModulesDir": true
 }
