--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "ms-vscode-remote.remote-containers",
     "ms-azuretools.vscode-docker",
+    "bradlc.vscode-tailwindcss",
     "shd101wyy.markdown-preview-enhanced"
   ],
   "unwantedRecommendations": []
