--- a/app/.env.example
+++ b/app/.env.example
@@ -1,4 +1,5 @@
 SESSION_ENCRYPTION_KEY=very-very-very-very-very-very-very-very-secret
+ADMIN_API_KEY=very-very-very-secret
 
 # Deno KV
 DENO_KV_ACCESS_TOKEN=very-very-secret
